TheMightyDude (29 July 2012)
--------------------------------------
Fixed Notice: Undefined variable: _cmb_hehasnofighterleft in combat.php
Fixed Notice: Undefined variable: l_special_port in galaxy.php

TheMightyDude (27 July 2012)
--------------------------------------
Cleaned up all the language files and removed redundant language variables.

TheKabal (25 July 2012)
--------------------------------------
All (function) files in includes/ now have correct indention, use the language object, and bind variables for SQL calls.

TheMightyDude (25 July 2012)
--------------------------------------
Fixed Notice: Undefined variable: level_factor in combat.php
Fixed Notice: Undefined variable: torp_dmg_rate in combat.php
Fixed Notice: Undefined variable: rating_combat_factor in combat.php
Fixed Notice: Undefined variable: upgrade_factor in combat.php
Fixed Notice: Undefined variable: upgrade_cost in combat.php
Fixed Notice: Use of undefined constant dev_escapepod - assumed 'dev_escapepod' in combat.php
Fixed Notice: Use of undefined constant ship_id - assumed 'ship_id' in combat.php
Fixed Notice: Undefined variable: armor_lost in combat.php
Fixed Notice: Undefined variable: fighters_lost in combat.php
Fixed Notice: Undefined index: winers should be $winer in calc_ownership.php
Fixed Notice: Undefined variable: l_youcan should be l_md_youcan in modify_defences.php
Fixed Notice: Use of undefined constant beams - assumed 'beams' in modify_defences.php
Fixed Notice: Use of undefined constant ship_energy - assumed 'ship_energy' in modify_defences.php
Fixed Warning:include_once(includes/sector_fighters.php): failed to open stream: No such file or directory in modify_defences.php
Fixed Notice: Undefined variable: mine_hullsize in traderoute.php
Removed two lines of language log lines that should of been there (not used) in attack.php
Fixed Incorrect language variable was $l_att_ysal2 should be $l_att_ysalv2 in attack.php