@@ -2,6 +2,9 @@ TheMightyDude (29 July 2012)
 --------------------------------------
 Fixed Notice: Undefined variable: _cmb_hehasnofighterleft in combat.php
 Fixed Notice: Undefined variable: l_special_port in galaxy.php
+Fixed Notice: Use of undefined constant time - assumed 'time' in igb.php
+Fixed Notice: Use of undefined constant character_name - assumed 'character_name' in igb.php
+Fixed Notice: Use of undefined constant balance - assumed 'balance' in igb.php
 
 TheMightyDude (27 July 2012)
 --------------------------------------
